CRUD for Devices. Created Jest test for Devices.
