# api/v1/routes/deviceRoutes.js
@@ -3,6 +3,7 @@
 const express = require('express');
 const router = express.Router();
 const deviceController = require('../controllers/deviceController');
+const scheduleController = require('../controllers/scheduleController');
 const { authenticateToken, checkRole } = require('../middleware/authMiddleware');
 
 router.get('/devices', authenticateToken, checkRole('Basic'), async (req, res) => {
@@ -19,7 +20,7 @@ router.get('/devices/:id', authenticateToken, checkRole('Basic'), async (req, re
         const deviceId = req.params.id;
         const deviceInfo = await deviceController.getDeviceInfo(deviceId);
         const backups = await deviceController.getAllBackups(deviceId);
-        const scheduledBackups = await deviceController.getScheduledBackups(deviceId);
+        const scheduledBackups = await scheduleController.getScheduledBackups(deviceId);
         
         res.json({
             deviceInfo,
@@ -52,6 +53,17 @@ router.post('/devices', authenticateToken, checkRole('Basic'), async (req, res) 
     } catch (error) {
         console.error(error);
         res.status(500).send(error.message);
+    }
+});
+
+router.delete('/devices/:id', authenticateToken, checkRole('User'), async (req, res) => {
+    try {
+        const deviceId = req.params.id;
+        await deviceController.deleteDevice(deviceId);
+        res.status(200).send({ message: 'Device and all associated data deleted successfully' });
+    } catch (error) {
+        console.error(error);
+        res.status(500).json({ error: error.message });
     }
 });
 
